# rust-learning

./: .gitignore  Cargo.toml
closure/: Cargo.toml
closure/src/: lib.rs  main.rs  shoe.rs
collections/: Cargo.toml
collections/src/: main.rs  map.rs  result.rs  string.rs  vector.rs
concurrent/: Cargo.toml
concurrent/src/: lib.rs
generics/: Cargo.toml
generics/src/: lib.rs  main.rs  point.rs
guess/: Cargo.toml
guess/src/: lib.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
minigrep/: Cargo.toml  README.md
minigrep/src/: lib.rs
oop/: Cargo.toml
oop/src/: averaged_collection.rs  blog.rs  gui.rs  lib.rs
patterns/: Cargo.toml
patterns/src/: desctructure.rs  lets.rs  lib.rs  matches.rs
pointer/: Cargo.toml  README.md
pointer/src/: default.rs  lib.rs  list.rs  main.rs  message.rs  node.rs  rcbox.rs  refcell.rs  tree.rs
testing/: Cargo.toml  README.md
testing/src/: lib.rs
testing/tests/: integration_test.rs
